# Parsing-with-Scrapy

./: authors.json  main.py  models.py  pyproject.toml
my_spyder/my_spyder/: middlewares.py  settings.py
my_spyder/my_spyder/spiders/: authors.py  quotes.py
