[tool.poetry]
name = "hw-2-9"
version = "0.1.0"
description = ""
authors = ["ZatokaV <zatokav@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_2_9"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.7.1"
pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
mongoengine = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
